# PalworldServer

./: .gitignore  CMakeLists.txt  README.md
Dependencies/PalSDK/: CMakeLists.txt
Dependencies/PalSDK/include/: PalServer.hpp  PalServerSDK.hpp
Dependencies/PalSDK/include/PalSDK/: ABP_Anubis_Implementation_classes.hpp  ABP_Anubis_Implementation_parameters.hpp  ABP_Anubis_Implementation_structs.hpp  ABP_Anubis_classes.hpp  ABP_Anubis_structs.hpp  ABP_Baphomet_Implementation_classes.hpp  ABP_Baphomet_Implementation_parameters.hpp  ABP_Baphomet_Implementation_structs.hpp  ABP_Baphomet_classes.hpp  ABP_Baphomet_structs.hpp  ABP_BlackMetalDragon_Implementation_classes.hpp  ABP_BlackMetalDragon_Implementation_parameters.hpp  ABP_BlackMetalDragon_Implementation_structs.hpp  ABP_BlackMetalDragon_classes.hpp  ABP_BlackMetalDragon_structs.hpp  ABP_BlueDragon_Implementation_classes.hpp  ABP_BlueDragon_Implementation_parameters.hpp  ABP_BlueDragon_Implementation_structs.hpp  ABP_BlueDragon_classes.hpp  ABP_ChickenPal_Implemantation_classes.hpp  ABP_ChickenPal_Implemantation_parameters.hpp  ABP_ChickenPal_Implemantation_structs.hpp  ABP_ChickenPal_classes.hpp  ABP_ChickenPal_structs.hpp  ABP_CowPal_Implementation_classes.hpp  ABP_CowPal_Implementation_parameters.hpp  ABP_CowPal_Implementation_structs.hpp  ABP_CowPal_classes.hpp  ABP_CowPal_structs.hpp  ABP_CuteFox_Implementation_classes.hpp  ABP_CuteFox_Implementation_parameters.hpp  ABP_CuteFox_Implementation_structs.hpp  ABP_CuteFox_classes.hpp  ABP_CuteFox_structs.hpp  ABP_FlowerDoll_Implementation_classes.hpp  ABP_FlowerDoll_Implementation_parameters.hpp  ABP_FlowerDoll_Implementation_structs.hpp  ABP_FlowerDoll_classes.hpp  ABP_FlowerDoll_structs.hpp  ABP_GrassPanda_Implementation_classes.hpp  (+3287 more)
Dependencies/PalSDK/include/PalServer/: ABP_Alpaca_Implementation_classes.hpp  ABP_Anubis_classes.hpp  ABP_BlueDragon_Implementation_structs.hpp  ABP_ChickenPal_Implemantation_classes.hpp  ABP_ChickenPal_classes.hpp  ABP_ChickenPal_structs.hpp  ABP_CowPal_Implementation_parameters.hpp  ABP_CowPal_Implementation_structs.hpp  ABP_FlowerDoll_Implementation_parameters.hpp  ABP_FlowerDoll_classes.hpp  ABP_FlowerDoll_structs.hpp  ABP_GrassPanda_Implementation_classes.hpp  ABP_GrassPanda_classes.hpp  ABP_GrassPanda_structs.hpp  ABP_GrassRabbitMan_Implementation_structs.hpp  ABP_IceFox_Implementation_parameters.hpp  ABP_IceFox_classes.hpp  ABP_LilyQueen_Implementation_parameters.hpp  ABP_LilyQueen_Implementation_structs.hpp  ABP_LilyQueen_classes.hpp  ABP_NPC_Child_structs.hpp  ABP_Player_Hair_parameters.hpp  ABP_Player_Hair_structs.hpp  ABP_Player_Head_parameters.hpp  ABP_Player_Head_structs.hpp  ABP_Player_classes.hpp  ABP_VioletFaily_Implementation_structs.hpp  ABP_VolcanicMonster_Implementation_parameters.hpp  ABP_VolcanicMonster_classes.hpp  AIModule_parameters.hpp  ALI_HumanCloth_classes.hpp  ALI_HumanCloth_parameters.hpp  ALI_HumanHair_classes.hpp  ALI_HumanHair_parameters.hpp  ALI_MonsterBase_classes.hpp  ALI_MonsterPhysics_classes.hpp  ALI_MonsterPhysics_parameters.hpp  ALI_NPC_HairCloth_classes.hpp  ALI_PalmiSubFunction_parameters.hpp  ActorLayerUtilities_parameters.hpp  (+1417 more)
Dependencies/PalSDK/source/: ABP_Anubis_Implementation_functions.cpp  ABP_Baphomet_Implementation_functions.cpp  ABP_BlackMetalDragon_Implementation_functions.cpp  ABP_BlueDragon_Implementation_functions.cpp  ABP_ChickenPal_Implemantation_functions.cpp  ABP_CowPal_Implementation_functions.cpp  ABP_CuteFox_Implementation_functions.cpp  ABP_FlowerDoll_Implementation_functions.cpp  ABP_GrassPanda_Implementation_functions.cpp  ABP_GrassRabbitMan_Implementation_functions.cpp  ABP_HadesBird_Implementation_functions.cpp  ABP_IceFox_Implementation_functions.cpp  ABP_LilyQueen_Implementation_functions.cpp  ABP_MonsterBase_functions.cpp  ABP_Mutant_Implementation_functions.cpp  ABP_NPC_Base_functions.cpp  ABP_Player_Hair_functions.cpp  ABP_Player_Head_functions.cpp  ABP_Player_functions.cpp  ABP_RedArmorBird_Implementation_functions.cpp  ABP_Ronin_Implementation_functions.cpp  ABP_Suzaku_Implementation_functions.cpp  ABP_ThunderDogImplementation_functions.cpp  ABP_ThunderDragonMan_Implementation_functions.cpp  ABP_Umihebi_Implementation_functions.cpp  ABP_VolcanicMonster_Implementation_functions.cpp  ABP_WeaselDragon_Implementation_functions.cpp  ABP_WhiteMoth_Implementation_functions.cpp  ABP_WhiteTiger_Implementation_functions.cpp  AIModule_functions.cpp  ALI_HumanCloth_functions.cpp  ALI_HumanHair_functions.cpp  ALI_MonsterBase_functions.cpp  ALI_MonsterPhysics_functions.cpp  ALI_NPC_HairCloth_functions.cpp  ALI_PalmiSubFunction_functions.cpp  ActorLayerUtilities_functions.cpp  ActorSequence_functions.cpp  AdvancedWidgets_functions.cpp  AkAudio_functions.cpp  (+1114 more)
Dependencies/cmake/: json.cmake  minhook.cmake  spdlog.cmake
Dependencies/versiondll/: CMakeLists.txt  dllmain.cpp
PalSDK/: CMakeLists.txt
PalSDK/include/: PalServer.hpp
PalSDK/source/: ABP_Alpaca_Implementation_functions.cpp  ABP_Anubis_Implementation_functions.cpp  ABP_FlowerDoll_Implementation_functions.cpp  ABP_GrassPanda_Implementation_functions.cpp  ABP_IceFox_Implementation_functions.cpp  ABP_NPC_Base_functions.cpp  ABP_Player_Hair_functions.cpp  ABP_Player_Head_functions.cpp  ABP_Player_functions.cpp  ABP_VioletFaily_Implementation_functions.cpp  AIModule_functions.cpp  ALI_HumanCloth_functions.cpp  ALI_MonsterPhysics_functions.cpp  ALI_PalmiSubFunction_functions.cpp  AkAudio_functions.cpp  AndroidFileServer_functions.cpp  AnimNotify_AkEvent_functions.cpp  AnimationSharing_functions.cpp  AssetTags_functions.cpp  AudioCapture_functions.cpp  AudioLinkEngine_functions.cpp  AudioSynesthesia_functions.cpp  BI_PalGrapplingAimInterface_functions.cpp  BPI_GetPalAIBlackboard_functions.cpp  BPI_SkillEffect_functions.cpp  BPI_SpawnPointInfo_functions.cpp  BP_AIADamageReaction_functions.cpp  BP_AIActionBaseCamp_InSpa_functions.cpp  BP_AIActionCombatHeli_Dead_functions.cpp  (+496 more)
include/: PalManager.hpp  PalServer.hpp  Scanner.hpp
source/: Core.cpp  Core.hpp  Logger.cpp  PalManager.cpp  PalServer.cpp  Scanner.cpp  dllmain.cpp
(+1468 files in other folders)
